--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
 	<body>
 		<main class="container">
 
-			<article class="qoute">
+			<article class="quote">
 				<blockquote class="quote__text">
-					<p>
+					<p class="paragraph paragraph--quote">
 						"The science of operations, as derived from mathematics more
 						especially, is a science of itself, and has its own abstract truth
 						and value."
@@ -31,56 +31,60 @@
           <figcaption>Ada Lovelace</figcaption>
           </blockquote>
 					
-					<svg class="qoute__refresh">
+					<svg class="quote__refresh">
 						<use xlink:href="./images/desktop/sprite.svg#icon-refresh"></use>
 					</svg>
 				</div>
 			</article>
 
       <section class="clock">
-        <div class="main">
+        <div class="clock__main">
         <div class="clock__welcome">
           <svg class="clock__icon">
 						<use xlink:href="./images/desktop/sprite.svg#icon-sun"></use>
 					</svg>
-          <p>Good morning, it's currently</p>
+          <p class="paragraph paragraph--clock">Good morning, it's currently</p>
         </div>
         <div class="clock__time">
-          <h1>11:37 <span class="clock__timezone">bst</span></h1>
+          <h1 class="heading-1">11:37<span class="clock__timezone">bst</span></h1>
         </div>
         <div class="clock__location">
-          <h2>In London, UK</h2>
+          <h2 class="heading-2">In London, UK</h2>
         </div>
       </div>
 
-      <button class="btn">More 
+      <button class="btn">More
+        <div>
         <svg>
           <use xlink:href="./images/desktop/sprite.svg#icon-arrow-down"></use>
         </svg>
+      </div>
       </button>
       </section>
 
-      <section class="more">
-        <div class="more__info">
-          <h3>Current timezone</h3>
-          <p>Europe/London</p>
-        </div>
-
-        <div class="more__info">
-          <h3>Day of the year</h3>
-          <p>295</p>
-        </div>
-
-        <div class="more__info">
-          <h3>Day of the week</h3>
-          <p>5</p>
-        </div>
-
-        <div class="more__info">
-          <h3>Week number</h3>
-          <p>42</p>
-        </div>
-      </section>
+      
 		</main>
+
+    <section class="more">
+      <div class="more__info ">
+        <h3 class="heading-3">Current timezone</h3>
+        <p class="paragraph paragraph--more">Europe/London</p>
+      </div>
+
+      <div class="more__info">
+        <h3 class="heading-3">Day of the year</h3>
+        <p class="paragraph paragraph--more">295</p>
+      </div>
+
+      <div class="more__info">
+        <h3 class="heading-3">Day of the week</h3>
+        <p class="paragraph paragraph--more">5</p>
+      </div>
+
+      <div class="more__info">
+        <h3 class="heading-3">Week number</h3>
+        <p class="paragraph paragraph--more">42</p>
+      </div>
+    </section>
 	</body>
 </html>
