Added media queries

--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,8 @@
         <h3 class="heading-3">Week number</h3>
         <p class="paragraph paragraph--more">42</p>
       </div>
+
+      <div class="more__bar"></div>
     </section>
 	</body>
 </html>
