--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <svg class="clock__icon">
 						<use xlink:href="./images/desktop/sprite.svg#icon-sun"></use>
 					</svg>
-          <p class="paragraph paragraph--clock">Good morning, it's currently</p>
+          <p class="paragraph paragraph--clock">Good morning</p>
         </div>
         <div class="clock__time">
           <h1 class="heading-1">11:37<span class="clock__timezone">bst</span></h1>
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <button class="btn">More
+      <button class="btn"><p>More </p>
         <div>
         <svg>
           <use xlink:href="./images/desktop/sprite.svg#icon-arrow-down"></use>
