Refactored the code and added comments

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,7 @@
 	<body>
 		<main class="container">
 			<article class="quote">
-				<blockquote class="quote__text">
-					<!-- <p class="paragraph paragraph--quote">
-						"The science of operations, as derived from mathematics more
-						especially, is a science of itself, and has its own abstract truth
-						and value."
-					</p>
-					<figcaption>Ada Lovelace</figcaption> -->
-				</blockquote>
+				<blockquote class="quote__text"></blockquote>
 
 				<svg class="quote__refresh">
 					<use xlink:href="./images/desktop/sprite.svg#icon-refresh"></use>
@@ -36,22 +29,7 @@
 			</article>
 
 			<section class="clock">
-				<div class="clock__main">
-					<!-- <div class="clock__welcome">
-						<svg class="clock__icon">
-							<use xlink:href="./images/desktop/sprite.svg#icon-sun"></use>
-						</svg>
-						<p class="paragraph paragraph--clock">Good morning</p>
-					</div>
-					<div class="clock__time">
-						<h1 class="heading-1">
-							11:37<span class="clock__timezone">bst</span>
-						</h1>
-					</div>
-					<div class="clock__location">
-						<h2 class="heading-2">In London, UK</h2>
-					</div> -->
-				</div>
+				<div class="clock__main"></div>
 
 				<button class="btn">
 					<p>More</p>
@@ -66,28 +44,6 @@
 			</section>
 		</main>
 
-		<section class="more">
-			<!-- <div class="more__info">
-				<h3 class="heading-3">Current timezone</h3>
-				<p class="paragraph paragraph--more">Europe/London</p>
-			</div>
-
-			<div class="more__info">
-				<h3 class="heading-3">Day of the year</h3>
-				<p class="paragraph paragraph--more">295</p>
-			</div>
-
-			<div class="more__info">
-				<h3 class="heading-3">Day of the week</h3>
-				<p class="paragraph paragraph--more">5</p>
-			</div>
-
-			<div class="more__info">
-				<h3 class="heading-3">Week number</h3>
-				<p class="paragraph paragraph--more">42</p>
-			</div>
-
-			<div class="more__bar"></div> -->
-		</section>
+		<section class="more"></section>
 	</body>
 </html>
